Require a permission to launch enable/disable activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,7 @@
     <string name="settings_category_open_other">"Open other settings"</string>
     <string name="action_start_overlay">"Start FakeStandby"</string>
     <string name="action_stop_overlay">"Stop FakeStandby"</string>
+
+    <string name="start_stop_permission_description">"start or stop FakeStandby"</string>
+    <string name="start_stop_permission_label">"Start/Stop FakeStandby"</string>
 </resources>
